--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('/assests/resume.pdf')"
+            onclick="window.open('assests/resume.pdf')"
           >
             Download CV
           </button>
@@ -85,7 +85,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="/assests/me-transformed.jpeg"
+            src="assests/me-transformed.jpeg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -94,7 +94,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="/assests/experience.png"
+                src="assests/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -103,7 +103,7 @@
             </div>
             <div class="details-container">
               <img
-                src="/assests/education.png"
+                src="assests/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -124,7 +124,7 @@
         </div>
       </div>
       <img
-        src="/assests/arrow.png"
+        src="assests/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -282,7 +282,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assests/doordash_placeholder.jpg"
+                src="assests/doordash_placeholder.jpg"
                 alt="Project 1"
                 class="project-img"
               />
@@ -301,7 +301,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assests/TRH.png"
+                src="assests/TRH.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -320,7 +320,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assests/covid.jpeg"
+                src="assests/covid.jpeg"
                 alt="Project 3"
                 class="project-img"
               />
@@ -345,7 +345,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assests/stocks.png"
+                src="assests/stocks.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -370,7 +370,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assests/netflix.png"
+                src="assests/netflix.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -389,7 +389,7 @@
         </div>
       </div>
       <img
-        src="/assests/arrow.png"
+        src="assests/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -401,7 +401,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="/assests/email.png"
+            src="assests/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -410,7 +410,7 @@
 
         <div class="contact-info-container">
             <img
-              src="/assests/user60.png"
+              src="assests/user60.png"
               alt="Call icon"
               class="icon contact-icon"
             />
@@ -418,7 +418,7 @@
         </div>
         <div class="contact-info-container">
             <img
-              src="/assests/linkedin.png"
+              src="assests/linkedin.png"
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
