--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="text-container">
             <p>
-                Welcome to my corner of the web! I'm Chaitanya, 
+                Welcome to my corner of the web! I'm Chaitanya Kumar Reddy Goukanapalli, 
                 a data analyst with a passion for transforming raw data 
                 into meaningful insights and compelling stories. 
                 I thrive on the intersection of technology and creativity, 
