--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assests/resume.pdf')"
+            onclick="window.open('assests/Resume.pdf')"
           >
             Download CV
           </button>
