--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Data Visualization and Machine Learning</h2>
+            <h2 class="experience-sub-title">Data Visualization and ML</h2>
             <div class="article-container">
               <article>
                 <img
