--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">COVID-19 Exploratory Data Analysis Using SQL</h2>
-            <p>Performed exploratory data analysis on COVID-19 worldwide data using SQL. Utilized daily data on confirmed, dead and recovered cases from February 2020 to February 2022 accross the world.</p>
+            <h2 class="experience-sub-title project-title">COVID-19 Exploratory Data Analysis Using SQL and Tableau</h2>
+            <p>Performed exploratory data analysis on COVID-19 worldwide data using SQL. Utilized daily data on confirmed, dead and recovered cases from February 2020 to February 2022 accross the world. Designed a dashboard highlighting these findings using Tableau</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
