--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Delivery Duration Prediction</h2>
-            <p>Deployed a predictive model for DoorDash delivery durations using machine learning , featuring advanced feature engineering to address data intricacies like redundancies and collinearities. </p>
+            <p>Deployed a predictive model for DoorDash delivery durations using machine learning in Python, featuring advanced feature engineering to address data intricacies like redundancies and collinearities. </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -307,7 +307,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">Analysing Trends on Twitter, Reddit and HackerNews</h2>
-            <p>Utilizing data crawlers, performing data cleaning and creating compelling dashboard that highlight sentimental analysis and most common topics discussed across these platforms.</p>
+            <p>Utilizing data crawlers creatd using Python, performing data cleaning and creating compelling dashboard that highlight sentimental analysis and most common topics discussed across these platforms.</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
