--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             src="assests/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/chaitanya-kumar-reddy-goukanapalli-2726951ba/'"
+            onclick="location.href='https://www.linkedin.com/in/ckrg2001/'"
           />
           <img
             src="assests/github.png"
